@@ -7,8 +7,9 @@
     <image sym="climb">vikings/erik/erik_climbing.tga</image>
     <image sym="bull-left">vikings/erik/erik_bullhead_left.tga</image>
     <image sym="bull-right" srcsym="bull-left" operation="mirror-x"/>
-    <image sym="pull-right">pushsketch.png</image>
-    <image sym="pull-left" srcsym="pull-right" operation="mirror-x"/>
+    <!-- <image sym="pull-right">pushsketch.png</image>
+    <image sym="pull-left" srcsym="pull-right" operation="mirror-x"/> -->
+
   </load_pre>
 
   <states>
@@ -20,10 +21,14 @@
     <state name="onground_knocked-out_left" image="erik_ko_left.png"/>
     <state name="onground_knocked-out_right" image="erik_ko_right.png"/>
 
-    <state name="onground_pulling_left" sym="pull-left"/>
+    <!-- <state name="onground_pulling_left" sym="pull-left"/>
     <state name="falling_pulling_left" sym="pull-left"/>
     <state name="onground_pulling_right" sym="pull-right"/>
-    <state name="falling_pulling_right" sym="pull-right"/>
+    <state name="falling_pulling_right" sym="pull-right"/> -->
+    <state name="onground_pulling_left" sym="left"/>
+    <state name="falling_pulling_left" sym="left"/>
+    <state name="onground_pulling_right" sym="right"/>
+    <state name="falling_pulling_right" sym="right"/>
 
     <state name="falling_standing_right" sym="right"/>
     <state name="falling_standing_left" sym="left"/>
